# Blood_readings_web

./: .gitignore  README.md  config.py  install.sh  main.py  migrate_new_params.py  pyproject.toml  run.py  scan_pdfs.py
app/: __init__.py  admin.py  auth.py  forms.py  init.py  models.py  norms.py  pdf_parser.py  routes.py
templates/: base.html  dashboard.html  index.html
templates/admin/: db.html  profile.html  user_form.html  users.html
templates/analyses/: _form_body.html  add.html  edit.html  list.html  view.html
templates/auth/: login.html  register.html
templates/body/: index.html  index_old.html
